--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .textCenter {
     text-align: center;
 }
-.prueba {
+.navBar {
     color:black;
     text-decoration: none;
     margin-left: 20px;
